<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="charleszhu.qunnipiac.edu.gittest.OwnerFragment"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/view_button"
        android:text="View Reservations"
        android:textSize="20sp"
        android:background="#ff7c2d"
        android:textColor="#FFF"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="onOwnerClick"/>

    <Button
        android:id="@+id/add_button"
        android:text="Add Reservation"
        android:layout_below="@id/view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="#ff7c2d"
        android:textColor="#FFF"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="onOwnerClick"/>
    <Button
        android:id="@+id/edit_button"
        android:text="Edit Reservation"
        android:layout_below="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="#ff7c2d"
        android:textColor="#FFF"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="onOwnerClick"/>

</LinearLayout>
